--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 </head>
 <body>
   <div id="menu">
-
+    <a><img src="logo.png"></a>
+    <a>Rc</a>
   </div>
   <div class="header">
-
+    <div>
+      RCode.
+    </div>
   </div>
   <div id="score">
     <div>Your Score</div>
