--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
   <div id="menu">
-    <a><img src="logo.png"></a>
-    <a>Rc</a>
+    <a>RCode.</a>
   </div>
   <div class="header">
     <div>
-      RCode.
+      <h1>RCode.</h1>
+      <button>Start Game</button>
     </div>
   </div>
   <div id="score">
