--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Rcode</title>
   <link rel="stylesheet" href="./css/codemirror.css">
   <link rel="stylesheet" href="./css/one-dark.css">
   <link rel="stylesheet" href="./css/style.css">
